--- a/Parte1/css/style.css
+++ b/Parte1/css/style.css
@@ -1,1 +1,41 @@
- 
+h1{
+    font-family: system-ui;
+    text-align: center;
+}
+h3{
+    font-family: system-ui;
+    text-align: center;
+}
+h4{
+    font-family: system-ui;
+    text-align: center;
+    font-size: 15px;
+}
+header{
+text-align:center;
+}
+
+footer{
+    margin-top: 50px;
+    text-align: end;
+}
+
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
+  }
+
+img{
+    border: double;
+}
+
+ul{
+    list-style: none;
+}
+
+body{
+    background-color: antiquewhite;
+}
